* If a BView::SetMouseEventMask() arrived in the app_server after the mouse buttons   have already been released again, the temporary listener was still added.   This fixes bug #727. * No longer removes temporary listeners if there are mouse buttons left pressed; ie.   if you press two buttons at once, the listeners are now only removed after you've   released them both. This is not only more logical, it's also how BeOS behaves :-)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18483 a95241bf-73f2-0310-859d-f6bbb57e9c96